# Homework_21.2

./: .gitignore  README.md  main.py  pyproject.toml
html/: catalogs.html  categories.html  contacts.html  index.html
