[project]
name = "homework-21-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksey Lozhkin",email = "aleksey.s.lozhkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "homework_21"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
